# alioth

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  abnf.abnf  abnf.json  main.cpp  makefile  package-lock.json  package.json  tsconfig.json  vcpkg.json
.side/: manifest
.side/scripts/: build  package  test
.side/targets/: target-main
doc/: THINK  abnf.abnf  about.json  grammar文法介绍.md  logcfg.json  logging.json  template模板引擎介绍.md  分析器算法介绍.md  待实施思路.md  骨架推理算法介绍.md
doc/draft/: features.md  types.md
examples/marking_language/: README.md  example.manifest  manifest.grammar  parse.sh
examples/programming_language/: CMakeLists.txt  gen.sh  play.grammar  test.play
examples/programming_language/include/play/: syntax.h
examples/programming_language/src/: play.cpp  syntax.cpp
extension/: extension.ts
grammar/: annotate.annotate  annotate.grammar  annotation.grammar  assignment.grammar  grammar.grammar  grammar.json  json.grammar  template.grammar  template.json  testing.grammar
inc/: compiler.hpp  logger.helper.hpp  logger.hpp  resource.hpp
inc/basis/: agent.hpp  chainz.hpp  cli.hpp  jsonz.hpp  logging.hpp  proxy.hpp  rutex.hpp  tlog.hpp  uriz.hpp  utils.hpp
include/alioth/: alioth.h  ast.h  attribute.h  document.h  error.h  error_handle.h  generic.h  grammar.h  inspect.h  lexicon.h  logging.h  parser.h  regex.h  skeleton.h  source.h  strings.h  syntax.h  template.h  token.h  variable.h
include/alioth-cli/: compile.h  framework.h  parse.h  render.h  skeleton.h  syntax.h  tokenize.h
include/alioth/lex/: builder-fwd.h  builder.h  lex-fwd.h  lex.h  scanner-fwd.h  scanner.h
include/alioth/syntax/: builder-fwd.h  builder.h  parser.h  syntax-fwd.h  syntax.h
include/alioth/utils/: clan.h  dict.h  hex.h
include/aliox/: grammar.h  skeleton.h  template.h
include/cli/: application.h  application.inl  argument.h  argument.inl  cli.h  command.h  command.inl  errors.h  inspect.h  inspect.inl  option.h  option.inl
module/abnf/: CMakeLists.txt  packing.yaml
module/abnf/include/: abnf.h
module/abnf/src/: abnf.cpp  main.cpp
module/test/: CMakeLists.txt
module/test/src/: char_set.cpp  regex.cpp
play/: CMakeLists.txt  play.grammar  play.json
play/include/: syntax.h
play/include/play/: syntax.h
play/src/: play.cpp  syntax.cpp
scripts/: about.js  logging.js  options.js  util.js
src/: alioth.cpp  ast.cpp  compiler.cpp  compiler.options.cpp  document.cpp  error_handle.cpp  grammar.cpp  inspect.cpp  lexicon.cpp  logger.cpp  logger.helper.cpp  logging.cpp  parser.cpp  regex.cpp  skeleton.cpp  source.cpp  strings.cpp  syntax.cpp  template.cpp  token.cpp
src/alioth/: ast.cpp  document.cpp  inspect.cpp  lexicon.cpp  parser.cpp  regex.cpp  skeleton.cpp  strings.cpp  syntax.cpp  template.cpp
src/alioth-cli/: compile.cpp  framework.cpp  main.cpp  parse.cpp  render.cpp  skeleton.cpp  syntax.cpp  tokenize.cpp
src/aliox/: grammar.cpp  skeleton.cpp  template.cpp
src/basis/: cli.cpp  jsonz.cpp  logging.cpp  tlog.cpp  uriz.cpp  utils.cpp
src/lex/: builder.cpp  lex.cpp  scanner.cpp
src/syntax/: builder.cpp  parser.cpp  syntax.cpp
src/utils/: clan.cpp  hex.cpp
src/vscode/: extension.ts  grammar.ts  template.ts  tokenize.ts
templates/skeleton/cpp/: declare_attributes.template  declare_attributes.tmpl  implement_attributes.template  parse_attributes.template  parse_attributes.tmpl  scope.template  syntax.cpp.template  syntax.cpp.tmpl  syntax.h.template  syntax.h.tmpl  syntax_of.template
test/: CMakeLists.txt  cli_test.cpp  generic_test.cpp  grammar_test.cpp  lexicon_test.cpp  parser_test.cpp  regex_test.cpp  skeleton_test.cpp  storage_test.cpp  syntax_test.cpp  variable_test.cpp
test/template_test/: branch.template  callee.template  caller.template  caller.tmpl  expr.template  final.template  final.tmpl  iter.template  mid.template  mid.tmpl  root.tmpl  template_test.cpp
